# fsr-tools

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
fsr_tools/: __init__.py
lfsr/: lfsr.py
lfsr_tools/: lfsr.py
