[tool.poetry]
name = "lfsr"
version = "0.0.1"
description = "Linear Feedback Shift Registers"
authors = ["Anubhav Mattoo <anubhavmattoo@outlook.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/anubhav-narayan/lfsr"
repository = "https://github.com/anubhav-narayan/lfsr"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
